; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_graphics.c_test_isempty.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_graphics.c_test_isempty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hwnd = common dso_local global i32 0, align 4
@Ok = common dso_local global i32 0, align 4
@InvalidParameter = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_isempty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_isempty() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* null, i32** %2, align 8
  %6 = load i32, i32* @hwnd, align 4
  %7 = call i32 @GetDC(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @GdipCreateFromHDC(i32 %8, i32** %2)
  store i32 %9, i32* %1, align 4
  %10 = load i32, i32* @Ok, align 4
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @expect(i32 %10, i32 %11)
  %13 = call i32 @GdipCreateRegion(i32** %4)
  store i32 %13, i32* %1, align 4
  %14 = load i32, i32* @Ok, align 4
  %15 = load i32, i32* %1, align 4
  %16 = call i32 @expect(i32 %14, i32 %15)
  %17 = call i32 @GdipIsClipEmpty(i32* null, i32* null)
  store i32 %17, i32* %1, align 4
  %18 = load i32, i32* @InvalidParameter, align 4
  %19 = load i32, i32* %1, align 4
  %20 = call i32 @expect(i32 %18, i32 %19)
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @GdipIsClipEmpty(i32* %21, i32* null)
  store i32 %22, i32* %1, align 4
  %23 = load i32, i32* @InvalidParameter, align 4
  %24 = load i32, i32* %1, align 4
  %25 = call i32 @expect(i32 %23, i32 %24)
  %26 = call i32 @GdipIsClipEmpty(i32* null, i32* %5)
  store i32 %26, i32* %1, align 4
  %27 = load i32, i32* @InvalidParameter, align 4
  %28 = load i32, i32* %1, align 4
  %29 = call i32 @expect(i32 %27, i32 %28)
  %30 = load i32, i32* @TRUE, align 4
  store i32 %30, i32* %5, align 4
  %31 = load i32*, i32** %2, align 8
  %32 = call i32 @GdipIsClipEmpty(i32* %31, i32* %5)
  store i32 %32, i32* %1, align 4
  %33 = load i32, i32* @Ok, align 4
  %34 = load i32, i32* %1, align 4
  %35 = call i32 @expect(i32 %33, i32 %34)
  %36 = load i32, i32* @FALSE, align 4
  %37 = load i32, i32* %5, align 4
  %38 = call i32 @expect(i32 %36, i32 %37)
  %39 = load i32*, i32** %4, align 8
  %40 = call i32 @GdipDeleteRegion(i32* %39)
  %41 = load i32*, i32** %2, align 8
  %42 = call i32 @GdipDeleteGraphics(i32* %41)
  %43 = load i32, i32* @hwnd, align 4
  %44 = load i32, i32* %3, align 4
  %45 = call i32 @ReleaseDC(i32 %43, i32 %44)
  ret void
}

declare dso_local i32 @GetDC(i32) #1

declare dso_local i32 @GdipCreateFromHDC(i32, i32**) #1

declare dso_local i32 @expect(i32, i32) #1

declare dso_local i32 @GdipCreateRegion(i32**) #1

declare dso_local i32 @GdipIsClipEmpty(i32*, i32*) #1

declare dso_local i32 @GdipDeleteRegion(i32*) #1

declare dso_local i32 @GdipDeleteGraphics(i32*) #1

declare dso_local i32 @ReleaseDC(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
